force-app/main/default/objects/Caregiver_Relationship__c/Caregiver_Relationship__c.object-meta.xml
<CustomObject>
    <description>Family and caregiver relationships for a patient.</description>
    <label>Caregiver Relationship</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Caregiver Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caregiver Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>