force-app/main/default/objects/Caregiver_Relationship__c/fields/Authorisation__c.field-meta.xml
<CustomField>
    <fullName>Authorisation__c</fullName>
    <label>Authorisation</label>
    <referenceTo>AuthorizationFormConsent</referenceTo>
    <relationshipLabel>Authorisation Records</relationshipLabel>
    <relationshipName>Authorisation</relationshipName>
    <type>Lookup</type>
</CustomField>