force-app/main/default/objects/Caregiver_Relationship__c/fields/Caregiver__c.field-meta.xml
<CustomField>
<fullName>Caregiver__c</fullName>
<label>Caregiver</label>
<type>Lookup</type>
<required>true</required>
<referenceTo>Account</referenceTo>
<deleteConstraint>Restrict</deleteConstraint>
<relationshipLabel>Caregiver Records</relationshipLabel>
<relationshipName>CaregiverRelationshipCaregiver</relationshipName>
</CustomField>