force-app/main/default/objects/Caregiver_Relationship__c/fields/Consent_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Consent_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Confirmed</label>
    <type>Checkbox</type>
</CustomField>