force-app/main/default/objects/Caregiver_Relationship__c/fields/Is_Payer__c.field-meta.xml
<CustomField>
    <fullName>Is_Payer__c</fullName>
    <label>Is Payer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>