force-app/main/default/objects/Caregiver_Relationship__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Records</relationshipLabel>
    <relationshipName>CaregiverRelationshipPatient</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>