force-app/main/default/objects/Caregiver_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
<fullName>Relationship_Type__c</fullName>
<label>Relationship Type</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Parent</fullName>
<default>true</default>
<label>Parent</label>
</value>
<value>
<fullName>Spouse</fullName>
</value>
<value>
<fullName>Guardian</fullName>
</value>
<value>
<fullName>Other</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>