force-app/main/default/objects/Caregiver_Relationship__c/fields/Updates_Authorised__c.field-meta.xml
<CustomField>
    <fullName>Updates_Authorised__c</fullName>
    <label>Updates Authorised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Payments &amp; logistics</fullName>
            </value>
            <value>
                <fullName>Weekly progress</fullName>
            </value>
            <value>
                <fullName>Full outcomes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>