force-app/main/default/objects/Caregiver_Relationship__c/CGR_No_Self_Link.validationRule-meta.xml
<ValidationRule>
<fullName>CGR_No_Self_Link</fullName>
<active>true</active>
<errorConditionFormula>Patient__c = Caregiver__c</errorConditionFormula>
<errorMessage>A patient cannot be their own caregiver.</errorMessage>
</ValidationRule>